[gd_scene load_steps=6 format=3 uid="uid://cct3dtamvnpr8"]

[ext_resource type="Script" uid="uid://xyo55lo626bj" path="res://desktop/new_game_dlg.gd" id="1_641a4"]
[ext_resource type="Texture2D" uid="uid://bgaqogjgr877k" path="res://assets/user.png" id="2_u7pbr"]
[ext_resource type="Texture2D" uid="uid://8q4omwb25b4p" path="res://assets/chip.png" id="3_soxl5"]
[ext_resource type="Texture2D" uid="uid://b1dnarrrwfra6" path="res://assets/dice0.png" id="4_u7pbr"]
[ext_resource type="Texture2D" uid="uid://cyxdpk0eeg7wb" path="res://assets/dice1.png" id="5_u7pbr"]

[node name="NewGameDlg" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_641a4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 55
theme_override_constants/margin_bottom = 55

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="CenterContainer1" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer1"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 33

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer"]
layout_mode = 2

[node name="Player1Text" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer1"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Player 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer1"]
layout_mode = 2

[node name="User1" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer1/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2_u7pbr")

[node name="Engine1" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer1/HBoxContainer"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_soxl5")

[node name="TShirt1" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer"]
layout_mode = 2
toggle_mode = true

[node name="RandomBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_u7pbr")
texture_pressed = ExtResource("5_u7pbr")

[node name="TShirt2" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer"]
layout_mode = 2
toggle_mode = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer"]
layout_mode = 2

[node name="Player2Text" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Player 2"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="User2" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_u7pbr")

[node name="Engine2" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_soxl5")

[node name="CenterContrainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer/CenterContrainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Start
"

[connection signal="toggled" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer1/HBoxContainer/User1" to="." method="_on_user_1_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer1/HBoxContainer/Engine1" to="." method="_on_engine_1_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/TShirt1" to="." method="_on_t_shirt_1_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/RandomBtn" to="." method="_on_random_btn_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/TShirt2" to="." method="_on_t_shirt_2_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer2/HBoxContainer/User2" to="." method="_on_user_2_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CenterContainer1/HBoxContainer/VBoxContainer2/HBoxContainer/Engine2" to="." method="_on_engine_2_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContrainer2/StartBtn" to="." method="_on_start_btn_pressed"]
